# gameFunctioneel

./: CHANGELOG.md  GameFp.cabal  readme.txt
app/: Controller.hs  Game.hs  Logic.hs  Main.hs  Model.hs  Rendering.hs  Scores.txt  View.hs
