cabal-version:      2.4
name:               GameFp
version:            0.1.0.0
author:             Julianvanbijlert
maintainer:         116498773+Julianvanbijlert@users.noreply.github.com
extra-source-files: CHANGELOG.md

executable GameFp
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
                     Controller
                     Model
                     View
                     
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>= 4.16.4.0,
                      gloss >= 1.13.1.2,
                      random
    hs-source-dirs:   app
    default-language: Haskell2010
